# jukebox

./: .gitignore  Dockerfile  callbacks.py  consts.py  docker-compose.yml  main.py  pyproject.toml  track.py  utils.py  yt.py
handlers/: __init__.py  callback.py  cancel.py  download.py  error.py  help.py  message.py  search.py  start.py
handlers/albums/: __init__.py  download.py  get.py  search.py
handlers/selector/: __init__.py  download.py  lyrics.py  search.py
handlers/songs/: __init__.py  download.py  lyrics.py  search.py
handlers/url/: __init__.py  download.py
handlers/video/: __init__.py  download.py  search.py
services/: __init__.py  album.py  download.py  lyrics.py  metadata.py
