[project]
name = "jukebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "dotenv>=0.9.9",
    "music-tag>=0.4.3",
    "pillow>=12.2.0",
    "python-telegram-bot>=22.5",
    "validators>=0.35.0",
    "youtube-title-parse>=1.0.0",
    "yt-dlp[default]>=2025.12.8",
    "ytmusicapi>=1.12.1",
]
